feat(batsi-ng-models): let station interface autogenerate
